# tigris-boto3-ext

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: agent_kit_usage.py  basic_usage.py  bucket_info_usage.py  bundle_usage.py  context_manager_usage.py  decorator_usage.py  multi_agent_workflow.py  rename_usage.py  sprite_agent.py  sprites_multi_agent_test.py
tests/: __init__.py  conftest.py  test_agent_kit.py  test_bundle.py  test_helpers.py  test_iam.py  test_object_notifications.py  test_rename.py  test_rest.py
tests/integration/: README.md  __init__.py  conftest.py  test_agent_kit.py  test_bucket_info.py  test_bundle.py  test_client_integration.py  test_context_managers_integration.py  test_decorators_integration.py  test_forks.py  test_rename.py  test_snapshot_name.py  test_snapshots.py
tigris_boto3_ext/: __init__.py  _iam.py  _internal.py  _rest.py  agent_kit.py  bundle.py  client.py  context_managers.py  decorators.py  helpers.py  object_notifications.py
