[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigris-boto3-ext"
version = "0.1.1"
description = "Extend boto3 with Tigris-specific features like snapshots and bucket forking"
readme = "README.md"
authors = [
    {name = "Tigris Data", email = "support@tigrisdata.com"}
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["tigris", "boto3", "s3", "object-storage", "snapshot", "fork"]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "boto3-stubs[s3]>=1.26.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tigrisdata/tigris-boto3-ext"
Documentation = "https://github.com/tigrisdata/tigris-boto3-ext#readme"
Repository = "https://github.com/tigrisdata/tigris-boto3-ext"
Issues = "https://github.com/tigrisdata/tigris-boto3-ext/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tigris_boto3_ext*"]

[tool.setuptools.package-data]
tigris_boto3_ext = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
lint.extend-select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
lint.extend-ignore = ["ANN204", "ANN401", "ARG001", "COM812", "E501", "PGH003", "PLR0913", "PYI036", "RUF022"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mypy_boto3_s3.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tigris_boto3_ext",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "build>=1.0.0",
    "ipython>=8.18.1",
    "mypy>=1.14.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.0",
    "twine>=4.0.0",
]
